# kimika

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docs.yml
docs/: getting_started.md  index.md
examples/: 03_streamlit_walkthrough.md  README.md
kimika/: __init__.py
kimika/cli/: __init__.py  main.py
kimika/cli/commands/: __init__.py  catalog.py  config.py  init.py  run.py  ui.py  validate.py
kimika/engines/: __init__.py  base.py  registry.py
kimika/io/: __init__.py  readers.py  trajectory.py  writers.py
kimika/recipes/: __init__.py  loader.py  runner.py  validator.py
kimika/schemas/: __init__.py  base.py  recipe.py  system.py  tracking.py
kimika/schemas/engines/: __init__.py
kimika/schemas/tasks/: __init__.py
kimika/tasks/: __init__.py  base.py  registry.py
kimika/tracking/: __init__.py  artifacts.py  logger.py  mlflow_backend.py
kimika/ui/: __init__.py  app.py  schema_to_form.py  state.py
kimika/ui/components/: __init__.py
kimika/ui/pages/: 01_home.py  02_recipe_builder.py  03_runner.py  04_results_viewer.py  05_experiment_browser.py
kimika/utils/: __init__.py  config.py  hash.py  logging.py  paths.py
kimika/workspace/: __init__.py  init.py  layout.py  project.py
kimika/workspace/templates/default/: README.md  recipe.yaml
recipes/: README.md
tests/unit/: test_smoke.py
