[project]
name = "kimika"
version = "0.0.1"
description = "Recipe-driven software for computational chemistry and computational biochemistry."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Takumi Akamatsu" },
]
keywords = [
    "computational-chemistry",
    "computational-biochemistry",
    "quantum-chemistry",
    "molecular-dynamics",
    "streamlit",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    # Foundations / schema / CLI / UI
    "pydantic>=2.7",
    "ruamel.yaml>=0.18",
    "typer>=0.12",
    "loguru>=0.7",
    "rich>=13.7",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "streamlit>=1.36",
    "streamlit-pydantic>=0.6",
    "py3Dmol>=2.1",
    "stmol>=0.0.9",
    "plotly>=5.20",
    "mlflow>=2.14",
    # Quantum chemistry
    "pyscf>=2.6",
    "qcengine>=0.30",
    "qcelemental>=0.28",
    "geometric>=1.0",
    "basis-set-exchange>=0.10",
    # Molecular dynamics
    "openmm>=8.1",
    "openmmforcefields>=0.12",
    "mdanalysis>=2.7",
    "mdtraj>=1.10",
    # Cheminformatics / atomistic helpers
    "rdkit>=2024.3",
    "ase>=3.23",
    # Biomolecular tools
    "biopython>=1.83",
    "prody>=2.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "hypothesis>=6.100",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/TakumiAkamatsu/kimika"
Issues = "https://github.com/TakumiAkamatsu/kimika/issues"

[project.scripts]
kimika = "kimika.cli.main:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kimika"]

[tool.hatch.build.targets.wheel.force-include]
"kimika/workspace/templates" = "kimika/workspace/templates"

[tool.uv]
package = true

# ---- Tooling configuration ---------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "kimika/workspace/templates",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length is enforced by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["kimika"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["kimika"]
plugins = ["pydantic.mypy"]
exclude = [
    "kimika/workspace/templates/.*",
]

[[tool.mypy.overrides]]
module = [
    "pyscf.*",
    "openmm.*",
    "openmmforcefields.*",
    "MDAnalysis.*",
    "mdtraj.*",
    "rdkit.*",
    "ase.*",
    "Bio.*",
    "prody.*",
    "qcengine.*",
    "qcelemental.*",
    "geometric.*",
    "basis_set_exchange.*",
    "py3Dmol.*",
    "stmol.*",
    "streamlit.*",
    "streamlit_pydantic.*",
    "plotly.*",
    "mlflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
markers = [
    "slow: tests that take more than a few seconds",
    "integration: integration tests that exercise external engines",
]

[tool.coverage.run]
source = ["kimika"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
